# rl-hill-climb-racer

./: 1.2.5-1 extract_distance_imgs_4_ocr.py  1.2.5-2  name extracted imgs.py  README.md  main.ipynb  main.py  pyproject.toml
assets/: digit_model.pth
